--- a/FinancialAid/RefreshContents.xib
+++ b/FinancialAid/RefreshContents.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Spot" translatesAutoresizingMaskIntoConstraints="NO" id="quT-4s-e1k">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Spot" translatesAutoresizingMaskIntoConstraints="NO" id="quT-4s-e1k">
                     <rect key="frame" x="262" y="262" width="75" height="75"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
