--- a/FinancialAid/Base.lproj/Main.storyboard
+++ b/FinancialAid/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9XC-4z-466" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1476" y="-824"/>
+            <point key="canvasLocation" x="2288" y="-824"/>
         </scene>
         <!--表格-->
         <scene sceneID="8oU-FF-Jen">
@@ -212,7 +212,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O8t-Iu-AgC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2202" y="-824"/>
+            <point key="canvasLocation" x="3014" y="-824"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="60e-fl-W3y">
@@ -309,7 +309,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H66-c9-SgI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2975" y="-1278"/>
+            <point key="canvasLocation" x="3787" y="-1278"/>
         </scene>
         <!--北大学生资助中心-->
         <scene sceneID="E8O-pA-Yk2">
@@ -671,13 +671,83 @@
                         <color key="tintColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Vj2-jN-KGV" kind="relationship" relationship="viewControllers" id="R4N-zB-TKd"/>
-                        <segue destination="ifz-ep-Elx" kind="relationship" relationship="viewControllers" id="KMq-GP-AsV"/>
+                        <segue destination="FCi-x0-wo2" kind="relationship" relationship="viewControllers" id="AUj-Ko-Cqk"/>
+                        <segue destination="Vj2-jN-KGV" kind="relationship" relationship="viewControllers" id="OkV-Po-wVl"/>
+                        <segue destination="ifz-ep-Elx" kind="relationship" relationship="viewControllers" id="167-x6-xdB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4oN-PE-w6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-82" y="-331"/>
+        </scene>
+        <!--首页-->
+        <scene sceneID="bca-eF-drX">
+            <objects>
+                <viewController id="bEu-FU-0Ye" customClass="HomeViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dc9-01-pGb"/>
+                        <viewControllerLayoutGuide type="bottom" id="TgE-VY-mw0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="L73-m0-ZfH">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Nhx-vS-1Ei">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">    北京大学围绕国家“促进贫困家庭学生文明生活、健康成才，促进和谐校园建设”的主题，专门成立学生资助中心，为构建“资助”与“育人”相结合的资助体系搭建平台，促进学生的全面发展。学生资助中心为挂靠在学生工作部的副处级实体单位，统一管理全校贫困家庭学生的资助工作。2006年1月7日下午，北京大学学生资助中心正式挂牌成立。 
+一、学生资助中心的主要工作目标 
+　　学生资助中心成立后，将按照“四专目标”，即专门机构、专职人员、专业背景、专项经费，搭建服务平台直接面向贫困家庭学生服务，为贫困家庭学生提供各项经济资助，做贫困家庭学生的贴心人。 
+二、学生资助中心目前的人员经费和办公地点情况 
+　　学生资助中心目前的工作人员有中心主任一名，副主任一名，工作人员三名。学校为学生资助中心的成立一次性拨付专项经费8万元，用于学生资助中心的建设。在办公资源有限的情况下，学校为学生资助中心在28楼一层东北侧专门辟出6间办公室，支持学生资助中心开展工作。 
+三、学生资助中心的下设部门简介 
+　　北京大学学生资助中心根据工作要求内设四个办公室。包括综合办公室、助学贷款管理办公室、助学金管理办公室和勤工助学工作办公室。 
+四、学生资助中心的主要工作职责 
+       1．负责贫困家庭学生资助，完善助学体系； 
+　　2．建立和维护贫困家庭学生档案； 
+　　3．负责国家助学贷款的资格审核及协助发放、贷后管理和诚信教育等； 
+　　4．联络、评审和发放各类助学金； 
+　　5．负责临时困难补助、学生借款和减免学费等工作； 
+　　6．负责全校勤工助学活动的管理，开辟和管理勤工助学岗位； 
+　　7．负责学生服务总队的活动指导工作 
+　　8．其他与贫困家庭学生资助相关的工作</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="top" secondItem="dc9-01-pGb" secondAttribute="bottom" id="3hX-Cm-X7W"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="centerX" secondItem="L73-m0-ZfH" secondAttribute="centerX" id="5ip-Kg-abW"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="centerY" secondItem="L73-m0-ZfH" secondAttribute="centerY" id="GvR-lP-GHq"/>
+                            <constraint firstAttribute="trailing" secondItem="Nhx-vS-1Ei" secondAttribute="trailing" id="HNZ-vE-n5M"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="centerY" secondItem="L73-m0-ZfH" secondAttribute="centerY" id="JP8-4S-yrp"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="width" secondItem="L73-m0-ZfH" secondAttribute="width" id="Osj-AB-WYf"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="centerX" secondItem="L73-m0-ZfH" secondAttribute="centerX" id="fE9-3w-dlf"/>
+                            <constraint firstItem="TgE-VY-mw0" firstAttribute="top" secondItem="Nhx-vS-1Ei" secondAttribute="bottom" id="iDg-ex-9Ji"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="height" secondItem="L73-m0-ZfH" secondAttribute="height" id="kxd-2b-dK1"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="width" secondItem="L73-m0-ZfH" secondAttribute="width" id="r5M-Of-qII"/>
+                            <constraint firstItem="Nhx-vS-1Ei" firstAttribute="leading" secondItem="L73-m0-ZfH" secondAttribute="leading" id="yc4-jo-Mh6"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="5ip-Kg-abW"/>
+                                <exclude reference="GvR-lP-GHq"/>
+                                <exclude reference="JP8-4S-yrp"/>
+                                <exclude reference="Osj-AB-WYf"/>
+                                <exclude reference="fE9-3w-dlf"/>
+                                <exclude reference="kxd-2b-dK1"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="首页" id="PUH-V8-Bqi"/>
+                    <connections>
+                        <outlet property="textView" destination="Nhx-vS-1Ei" id="gNQ-Nb-Zpb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="18c-Qo-53v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2288" y="-1515"/>
         </scene>
         <!--填表-->
         <scene sceneID="B9D-tM-cEp">
@@ -1180,7 +1250,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BXb-GW-eUb" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="f6f-7C-SwV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3739" y="-1278"/>
+            <point key="canvasLocation" x="4551" y="-1278"/>
         </scene>
         <!--照片-->
         <scene sceneID="7ke-xx-gQW">
@@ -1232,6 +1302,29 @@
             </objects>
             <point key="canvasLocation" x="3739" y="-551"/>
         </scene>
+        <!--主页-->
+        <scene sceneID="xZz-dw-XYS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FCi-x0-wo2" customClass="NavigationController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="主页" image="Home" selectedImage="HomeSelected" id="GmB-PY-1ha"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4MC-46-KuC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bEu-FU-0Ye" kind="relationship" relationship="rootViewController" id="grg-gX-ZVQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Aog-2g-r2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="733" y="-1515"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Birthday" width="28" height="28"/>
@@ -1242,6 +1335,8 @@
         <image name="Email" width="28" height="28"/>
         <image name="Form" width="28" height="28"/>
         <image name="Gender" width="28" height="28"/>
+        <image name="Home" width="28" height="28"/>
+        <image name="HomeSelected" width="28" height="28"/>
         <image name="Logout" width="28" height="28"/>
         <image name="PhoneNum" width="28" height="28"/>
         <image name="Setting" width="28" height="28"/>
