--- a/FinancialAid/Base.lproj/LaunchScreen.storyboard
+++ b/FinancialAid/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,24 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FinancialAid" translatesAutoresizingMaskIntoConstraints="NO" id="OhS-k7-k7t">
+                                <rect key="frame" x="193" y="174" width="214" height="173"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="北大资助" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohs-g2-nz2">
+                                <rect key="frame" x="204" y="355" width="192" height="56"/>
+                                <fontDescription key="fontDescription" name="MicrosoftYaHei" family="Microsoft YaHei" pointSize="48"/>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OhS-k7-k7t" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-40" id="Hd4-YU-bha"/>
+                            <constraint firstItem="OhS-k7-k7t" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="P7M-Xc-25O"/>
+                            <constraint firstItem="ohs-g2-nz2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="u54-FK-hVs"/>
+                            <constraint firstItem="ohs-g2-nz2" firstAttribute="top" secondItem="OhS-k7-k7t" secondAttribute="bottom" constant="8" id="xUX-Q2-PBq"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +40,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="FinancialAid" width="214" height="173"/>
+    </resources>
 </document>
