--- a/FinancialAid/Base.lproj/Main.storyboard
+++ b/FinancialAid/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--填表-->
+        <!--北京大学学生资助中心-->
         <scene sceneID="FYj-es-tY2">
             <objects>
                 <tableViewController id="oV5-EI-lGU" customClass="FormTableViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
@@ -118,7 +118,7 @@
                             <outlet property="delegate" destination="oV5-EI-lGU" id="9EB-hE-a4I"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="填表" id="4Id-3F-t8M">
+                    <navigationItem key="navigationItem" title="北京大学学生资助中心" id="4Id-3F-t8M">
                         <barButtonItem key="backBarButtonItem" title="目录" id="Qpt-1z-Dxv"/>
                     </navigationItem>
                     <connections>
@@ -611,12 +611,36 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AboutMeTableViewCell" textLabel="Zfn-iH-xo3" imageView="2JI-Fe-Hwb" style="IBUITableViewCellStyleDefault" id="bif-43-XTo">
+                                        <rect key="frame" x="0.0" y="187" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bif-43-XTo" id="Tk8-sZ-CbS">
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="关于北大资助" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Zfn-iH-xo3">
+                                                    <rect key="frame" x="58" y="0.0" width="507" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="About" id="2JI-Fe-Hwb">
+                                                    <rect key="frame" x="15" y="7" width="28" height="28"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="bEu-FU-0Ye" kind="show" id="Ikb-eb-fUv"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection id="el2-DW-QC4">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LogoutTableViewCell" textLabel="9Rg-pU-mwd" imageView="1Rf-t7-IcD" style="IBUITableViewCellStyleDefault" id="2nk-yK-oVw">
-                                        <rect key="frame" x="0.0" y="223" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="267" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2nk-yK-oVw" id="tO1-1z-FFu">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -640,9 +664,6 @@
                                         </connections>
                                     </tableViewCell>
                                 </cells>
-                            </tableViewSection>
-                            <tableViewSection id="IGc-hI-IaW">
-                                <cells/>
                             </tableViewSection>
                         </sections>
                         <connections>
@@ -668,7 +689,6 @@
                         <color key="tintColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="FCi-x0-wo2" kind="relationship" relationship="viewControllers" id="AUj-Ko-Cqk"/>
                         <segue destination="Vj2-jN-KGV" kind="relationship" relationship="viewControllers" id="OkV-Po-wVl"/>
                         <segue destination="ifz-ep-Elx" kind="relationship" relationship="viewControllers" id="167-x6-xdB"/>
                     </connections>
@@ -680,7 +700,7 @@
         <!--北京大学学生资助中心-->
         <scene sceneID="bca-eF-drX">
             <objects>
-                <viewController id="bEu-FU-0Ye" customClass="HomeViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bEu-FU-0Ye" customClass="AboutViewController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dc9-01-pGb"/>
                         <viewControllerLayoutGuide type="bottom" id="TgE-VY-mw0"/>
@@ -732,7 +752,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="18c-Qo-53v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1476" y="-1515"/>
+            <point key="canvasLocation" x="2947" y="1471"/>
         </scene>
         <!--填表-->
         <scene sceneID="B9D-tM-cEp">
@@ -1287,29 +1307,6 @@
             </objects>
             <point key="canvasLocation" x="3635" y="-824"/>
         </scene>
-        <!--首页-->
-        <scene sceneID="xZz-dw-XYS">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FCi-x0-wo2" customClass="NavigationController" customModule="FinancialAid" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="首页" image="Home" selectedImage="HomeSelected" id="GmB-PY-1ha"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4MC-46-KuC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="bEu-FU-0Ye" kind="relationship" relationship="rootViewController" id="grg-gX-ZVQ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Aog-2g-r2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="733" y="-1515"/>
-        </scene>
         <!--修改密码-->
         <scene sceneID="BmF-IV-lYp">
             <objects>
@@ -1402,6 +1399,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="About" width="28" height="28"/>
         <image name="Birthday" width="28" height="28"/>
         <image name="ChangePwd" width="28" height="28"/>
         <image name="Clear" width="28" height="28"/>
@@ -1410,8 +1408,6 @@
         <image name="Email" width="28" height="28"/>
         <image name="Form" width="28" height="28"/>
         <image name="Gender" width="28" height="28"/>
-        <image name="Home" width="28" height="28"/>
-        <image name="HomeSelected" width="28" height="28"/>
         <image name="Logout" width="28" height="28"/>
         <image name="PhoneNum" width="28" height="28"/>
         <image name="Setting" width="28" height="28"/>
